--- a/assets/main.css
+++ b/assets/main.css
@@ -197,7 +197,7 @@
     z-index: 10;
     padding: 0 30px;
     height: var(--header-height);
-    width: calc(100% - 300px);
+    width: calc(100% - 240px);
     display: flex;
     justify-content: space-between;
 }
@@ -379,7 +379,7 @@
     align-items: center;
     padding-top: 85px;
     background-image: linear-gradient(180deg,hsla(0,0%,100%,0),var(--layout-bg));
-    height: 205px;
+    height: 100%;
 
 }
 
@@ -454,7 +454,6 @@ a.zm-btn {
 .content__container {
     width: 100%;
     padding: 0 4vw 0;
-    background-color: green;
 }
 
 .content__navbar-menu {
@@ -487,3 +486,481 @@ a.zm-btn {
     color: var(--white);
 }
 
+
+/* ///////////////////////////// */
+/* CONTENT CONTAINER */
+
+.container__header {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+    height: 30px;
+    width: 100%;
+
+}
+
+.container__header-title {
+    display: flex;
+    flex: 1;
+    align-items: center;
+    color: var(--text-color);
+    text-decoration: none;
+    font-size: var(--text-title);
+    justify-content: space-between;
+}
+
+.container__header-all i {
+    padding-left: 10px;
+    color: var(--icon-blur);
+    font-size: 1.6rem;
+}
+
+.container__header-all {
+    display: flex;
+    align-items: center;
+    color: var(--icon-color);
+}
+
+.container__header-all h3{
+    font-size: 1.6rem;
+    font-weight: 400;
+    color: var(--text-blur);
+}
+
+.container__header-actions {
+    display: flex;
+    align-items: center;
+}
+
+.container__header-actions .icon {
+    font-size: 1.8rem;
+    margin-right: 5px;
+}
+
+.container__playmusic {
+    width: 100%;
+    display: flex;
+    margin-bottom: 25px;
+    
+}
+
+.container__slide {
+    width: 290px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    padding-right: 20px;
+    justify-content: flex-end;
+}
+
+.container__playmusic {
+    margin: 0;
+    width: 100%;
+    height: 244px;
+    display: flex;
+    margin-bottom: 25px;
+
+}
+
+.container__slide-show {
+    width: 230px;
+    height: 244px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    position: relative;
+    transform-style: preserve-3d;
+
+}
+
+.container__slide-item {
+    width: 230px;
+    height: 230px;
+    position: absolute;
+    transition: all 0.9s;
+    will-change: transform, opacity;
+    transform: perspective(1px) translateZ(0);
+
+}
+
+.container__slide-img {
+    width: 100%;
+    padding-top: 100%;
+    border-radius: 5px;
+}
+
+
+.container__slide-item.first {
+    opacity: 1;
+    transform: translate3d(0, 0, 80px) scale(1,1);
+}
+
+.container__slide-item.second {
+    opacity: 0.7;
+    transform: translate3d(var(--offset-x-second) , 0, 60px) scale(var(--scale-rate-second), var(--scale-rate-second));
+}
+
+.container__slide-item.third {
+    opacity: 0.9;
+    transform: translate3d(var(--offset-x-third) , 0, 20px) scale(var(--scale-rate-third), var(--scale-rate-third));
+}
+
+.container__slide-item.fourth {
+    opacity: 0.1;
+    transform: translate3d(var(--offset-x-third) , 0, 0) scale(var(--scale-rate-third), var(--scale-rate-third));
+}
+
+
+
+.container__playlist {
+    flex-grow: 1;
+    height: 100%;
+    overflow: hidden overlay;
+    margin-right: -6px;
+}
+
+.playlist__list-song {
+    border-bottom: 1px solid var(--border-secondary);
+    border-radius: 4px;
+}
+
+.playlist__song-card-info {
+    border-radius: 4px;
+}
+
+.playlist .playlist__song-card-info:hover {
+    background-color: var(--alpha-bg);
+}
+.playlist .opacity:hover {
+    visibility: visible;
+}
+.playlist .zm-actions:hover {
+    visibility: visible;
+    font-size: 2rem;
+    color: var(--white);
+
+}
+
+
+
+.media {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    border-radius: 5px;
+    padding: 10px;
+}
+
+.media-left {
+    display: flex;
+    align-items: center;
+}
+
+.song-thumb {
+    margin-right: 10px;
+    flex-shrink: 0;
+    overflow: hidden;
+    display: block;
+    cursor: pointer;
+    border-radius: 4px;
+    position: relative;
+}
+.zm-actions-container {
+    position: absolute;
+}
+
+.card-info {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+
+}
+.title-song {
+    font-size: var(--text-title-song);
+    font-weight: 500;
+    color: var(--text-color);
+}
+
+.is-oneline {
+    margin: 3px 0 0 0;
+    font-size: var(--text-subtitle-song);
+    color: var(--text-secondary);
+    font-weight: 300;
+}
+.is-oneline a{
+    text-decoration: none;
+}
+
+.media-left {
+    width: 50%;
+}
+
+
+.media-content {
+    flex-grow: 1;
+    align-items: center;
+    margin-right: 10px;
+}
+.album-info {
+    font-size: var(--text-subtitle-song);
+    color: var(--text-secondary);
+
+    cursor: pointer;
+}
+
+.action-items {
+    display: flex;
+}
+
+.level {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+.level-item {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+
+}
+
+.level-item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.duration {
+    font-size: var(--text-subtitle-song);
+    color: var(--text-secondary);
+}
+
+.album-info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.media-content .is-hover-circle,
+.media-right .is-hover-circle {
+    line-height: 0;
+    padding: 6px;
+    margin:  0 4px;
+}
+
+.media-right .duration {
+    font-size: 12px;
+    padding: 0 8px;
+    color: var(--song-item-action);
+}
+
+
+
+.row__item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+}
+
+.row__item-container {
+    height: 100%;
+    width: 100%;
+    border-radius: 4px;
+}
+
+.row__item-display {
+    position: relative;
+    overflow: hidden;
+}
+
+
+.row__item-display figure{
+    overflow: hidden;
+    border-radius: 5px;
+    line-height: 0;
+}
+
+.row__item-info {
+    display: flex;
+    flex-direction: column;
+}
+
+.row__item-info-name-artist,
+.row__item-info-name{
+    color: var(--white);
+    text-decoration:  none;
+    margin: 8px 0 4px 0;
+    font-size: var(--text-title-song);
+    font-weight: 500;
+}
+.row__item-info-creator {
+    color: var(--text-secondary);
+    font-size: var(--text-subtitle-song);
+    font-weight: 300;
+}
+
+.row__item-display:hover .opacity {
+    visibility: visible;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.row__item-display:hover .zm-actions{
+    visibility: visible;
+}
+
+.row__item-info a:hover{
+    color: var(--purple-primary);
+}
+
+.row__item-info.row__item-info-name-artist a:hover {
+    color: var(--purple-primary);
+    text-decoration: underline;
+
+}
+
+/* ************MODAL*************** */
+
+.modal__theme {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 100;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    overflow: hidden;
+}
+
+.modal__theme-container {
+    background-color: var(--primary-bg);
+    border-radius: 8px;
+    max-height: 100%;
+    width: 70vw;
+    max-width: 900px;
+    padding-bottom: 20px;
+    position: relative;
+}
+
+.modal__close-btn i{
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    margin: 0;
+}
+
+.modal__header-title {
+    font-size: 24px;
+    padding: 20px 30px;
+    margin: 0;
+    color: var(--text-primary);
+}
+
+.modal__content {
+    min-height: 500px;
+    width: 100%;
+    padding: 0 30px;
+    overflow: hidden overlay;
+
+}
+
+@media (min-width: 1024px) {
+    .l-12 {
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+    .l-2 {
+        flex: 0 0 16.667%;
+        max-width: 16.667%;
+    }
+    .row.sm-gutter .col{
+        padding: 0 7px;
+    }
+}
+
+
+
+
+.modal__content-title {
+    font-size: 1.8rem;
+    color: var(--text-primary);
+    margin-bottom: 10px;
+}
+
+.theme__container-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    overflow: hidden;
+    border-radius: 4px;
+}
+
+
+.theme__container-item:hover .opacity {
+    visibility: visible;
+
+
+}
+
+.theme__container-item figure {
+    line-height: 0;
+    overflow: hidden;
+    border-radius: 5px;
+    height: 0;
+    padding-bottom: 64.67%;
+    border: 1px solid transparent;
+
+}
+
+.theme__container-name {
+    font-size: 1.2rem;
+    color: var(--text-color);
+    margin: 6px 0;
+
+}
+
+
+.theme-actions.zm-box.zm-actions {
+    display: flex;
+    flex-direction: column;
+    width: 100px;
+    visibility: visible;
+    padding: 5px 0;
+
+}
+
+.theme-actions .is-small {
+    padding: 4px 0;
+    width: 100%;
+}
+
+.theme-actions-btns{
+    width: 100%;
+}
+
+.theme-actions .review {
+    background-color: rgba(0,0,0,.3);
+    border-color: hsla(0,0%,100%,.5);
+}
+
+.theme-actions-btns {
+    margin-bottom: 10px;
+    
+}
+
+
+.theme-actions span{
+    font-size: 8px;
+}
+
+/* END */
