--- a/assets/base.css
+++ b/assets/base.css
@@ -13,6 +13,7 @@
     --yellow: #f8e71c;
     --alpha-bg: hsla(0,0%,100%,0.1);
     --purple-primary: #ed2b91;
+    --link-text-hover: #fe63da;
 
     --player-height: 90px;
     --header-height: 70px;
@@ -179,6 +180,21 @@ figure {
     margin-top: 30px !important;
 }
 
+.mb-40 {
+    margin-bottom: 40px !important;
+}
+
+.mb-16 {
+    margin-bottom: 16px !important;
+}
+
+.fsize-1-8 {
+    font-size: 1.8rem !important;
+}
+
+.is-wrap {
+    flex-wrap: wrap;
+}
 
 
 
@@ -216,7 +232,7 @@ figure {
 }
 
 .icon {
-    font-size: 1.3rem;
+    font-size: 1.4rem;
     /* padding: 5px; */
     /* display: none; */
 }
@@ -226,7 +242,6 @@ figure {
     display: flex;
     flex-direction: column-reverse;
     border-radius: 999px;
-    display: none;
 }
 
 .button--disabled {
@@ -241,6 +256,10 @@ figure {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.zm-box.zm-actions i{
+    font-size: 2.2rem;
 }
 
 .is-rounded {
@@ -375,9 +394,7 @@ figure {
     border-radius: 50%;
     margin-top: -1px;
 }
-.icon.ic-like-full {
-    color: var(--purple-primary);
-}
+
 .icon.moveCenter {
     top: 3px;
     position: relative;
@@ -469,12 +486,14 @@ figure {
     font-size: 3rem;
 }
 
-.zm-actions .is-hover-circle:hover {
-    background: var(--hover-opacity);
+.is-large {
+    font-size: 2.3rem;
 }
 
-.zm-actions .is-hover-circle:hover {
-    background: var(--hover-opacity);
+.album-info .is-hover-circle:hover,
+.level-item:hover .is-hover-circle {
+    background-color: var(--alpha-bg);
+    
 }
 
 .zm-btn:hover {
@@ -486,4 +505,21 @@ figure {
 }
 .row__item-display img{
     transition: transform 0.7s;
+}
+
+.btn--heart.bi-heart-fill.icon.primary{
+    color: var(--purple-primary);
+}
+
+.btn--mic {
+    display: none;
+}
+
+.album-info:hover .btn--mic{
+    display: inline-block;
+}
+
+
+.bi.bi-mic.icon.primary {
+    color: var(--purple-primary);
 }
